--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
                         </div>
                     </div>
                     <div class="skill-category">
-                        <h3>Ferramentas & Tecnologias</h3>
+                        <h3>Ferramentas & Tecnologia</h3>
                         <div class="skill-tags">
                             <span class="skill-tag">PostgreSQL</span>
                             <span class="skill-tag">IntelliJ IDEA</span>
